1999-06-10  Harri Porten  <porten@kde.org>

	* modem.cpp: fixed check for stale lock file

1999-04-30  Harri Porten  <porten@kde.org>

	* conwindow.cpp: fixed deleting of old geometry layout
	* logview/loginfo.cpp: added #include <string.h> for strsep
	* "PPP support missing" is no longer fatal. Just a warning.
	* pppstatdlg.cpp: update statistic data even if widget is not visible.
	(patch by  Bastien Chevreux <B.Chevreux@dkfz-heidelberg.de>)

=========================== KDE 1.1.1 released =============================

1999-04-24  Harri Porten  <porten@kde.org>

	* runtests.cpp: test for `lock' in /etc/ppp/options is not needed any-
	more, thanks to a hint from Paul Mackeras (pppd). Leaving away ttySx
	(99/04/10) from the command line and binding stdin/stdout to the
	device (99/01/12) stops pppd from trying to lock the device itself.

1999-04-10  Harri Porten  <porten@kde.org>

	* connect.cpp: solved problems with pppd 2.3.6 and 2.3.7
	* pppdata.cpp: PPPDebug() defaults to `false'.
	* opener.cpp: introduced MY_ASSERT macro. We don't want to see our
	security checks disabled by the NDEBUG flag.

1999-04-09  Harri Porten  <porten@kde.org>

	* modem.cpp: improved protection against socket notifier zombie as
	suggested by Brian Fisher <fisherb@hotdog.ccs.queensu.ca>.


1999-04-06  Harri Porten  <porten@kde.org>
	* modem.cpp: set modemfd to -1 in closetty().
	* modem.cpp: block attempts to start the socket notfier if modemfd < 0.
	* connect.cpp: call closetty() _before_ execppp(). This should solve
	some of the reported timeout errors and the observed memory hogging.
	* modem.cpp: added stop() in closetty() (just to be sure)
	(all fixes above were proposed by Ian Gordon <ig@cs.strath.ac.uk>)
	* requester.cpp: setpppdRunning(false) _before_ killing the pppd.

1999-03-26  Harri Porten  <porten@kde.org>

	* main.cpp: added flushX() before every command_execute()
	* increased maximum modem string size
	* store child pid in helper_pid instead of gpppdata.* (safer) 
