@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.13"
+#define KPPPVERSION "1.6.14"
 #endif
