@@ -1,6 +1,11 @@
+1999-06-11  Harri Porten  <porten@kde.org>
+
+	* pppdata.cpp: line termination will default to CR instead of CR/LF.
+
 1999-06-10  Harri Porten  <porten@kde.org>
 
-	* modem.cpp: fixed check for stale lock file
+	* modem.cpp: fixed check for stale lock file ((s)traced down by
+	Duane Ellis <duane@skyhigh.com>)
 
 1999-04-30  Harri Porten  <porten@kde.org>
 
